--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -129,7 +129,7 @@ $core-tokens: (
   "red-900": #540004,
   "red-950": #410002,
 
-  // Amber/Yellow
+  // Amber
   "amber-50": #fff8e1,
   "amber-100": #ffecb3,
   "amber-150": #ffe082,
@@ -149,6 +149,27 @@ $core-tokens: (
   "amber-850": #7a3200,
   "amber-900": #692a00,
   "amber-950": #4d3600,
+
+  // Yellow
+  "yellow-50": #ffffe6,
+  "yellow-100": #ffffb8,
+  "yellow-150": #ffff9f,
+  "yellow-200": #ffff8a,
+  "yellow-250": #ffff73,
+  "yellow-300": #ffff5c,
+  "yellow-350": #ffff45,
+  "yellow-400": #ffff2e,
+  "yellow-450": #ffff17,
+  "yellow-500": #ffff00,
+  "yellow-550": #e9e900,
+  "yellow-600": #d1d100,
+  "yellow-650": #b9b900,
+  "yellow-700": #a3a300,
+  "yellow-750": #8b8b00,
+  "yellow-800": #757500,
+  "yellow-850": #5f5f00,
+  "yellow-900": #474700,
+  "yellow-950": #1a1a00,
 
   // Green
   "green-50": #e8f5e9,
@@ -171,7 +192,7 @@ $core-tokens: (
   "green-900": #09220b,
   "green-950": #071c08,
 
-  //Emerald
+  // Emerald
   "emerald-50": #ecfdf5,
   "emerald-100": #d1fae5,
   "emerald-150": #bcf7db,
@@ -191,6 +212,27 @@ $core-tokens: (
   "emerald-850": #065741,
   "emerald-900": #064e3b,
   "emerald-950": #022c22,
+
+  // Lime
+  "lime-50": #f7fee7,
+  "lime-100": #eefbe6,
+  "lime-150": #e2f6d5,
+  "lime-200": #d3f1c4,
+  "lime-250": #c5edb3,
+  "lime-300": #b6e8a2,
+  "lime-350": #a7e491,
+  "lime-400": #99e080,
+  "lime-450": #8adba0,
+  "lime-500": #7cd66e,
+  "lime-550": #6ed15c,
+  "lime-600": #60cc4b,
+  "lime-650": #52c83a,
+  "lime-700": #44c329,
+  "lime-750": #37bf18,
+  "lime-800": #28ba06,
+  "lime-850": #19b505,
+  "lime-900": #0ab004,
+  "lime-950": #07a603,
 
   //Rose
   "rose-50": #fff1f2,
